# ssdp-client

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: search.rs  subscribe.rs
src/: error.rs  lib.rs  search.rs  search_target.rs  search_unstable.rs  subscribe.rs
src/search/: mod.rs  search_target.rs
