[package]
name = "ssdp-client"
version = "0.5.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
description = "An asynchronous library for discovering, notifying and subscribing to devices and services on a network."
categories = ["network-programming", "asynchronous"]
keywords = ["async", "ssdp", "networking", "protocols"]
repository = "https://github.com/jjakobh/ssdp-client"
documentation = "https://docs.rs/ssdp-client"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[features]
unstable-stream = ["futures-async-stream"]

[dependencies]
async-std = "1"
futures-async-stream = { version = "0.1", optional = true }

[dev-dependencies]
pin-utils = "0.1.0-alpha.4"
