[package]
name = "ssdp-client"
version = "0.5.2"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
description = "An asynchronous library for discovering, notifying and subscribing to devices and services on a network."
categories = ["network-programming", "asynchronous"]
keywords = ["async", "ssdp", "networking", "protocols"]
repository = "https://github.com/jjakobh/ssdp-client"
documentation = "https://docs.rs/ssdp-client"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
async-std = "1"
log = "0.4"
genawaiter = { version = "0.99", default-features = false, features = ["futures03"] }

[dev-dependencies]
futures = "0.3"
async-attributes = "1"
pin-utils = "0.1.0-alpha.4"
